--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,17 @@
     "@shadcn/ui": "^0.0.4",
     "firebase": "^11.4.0",
     "framer-motion": "^12.5.0",
-    "next": "15.2.2",
+    "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5.8.2"
   }
 }
