--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "start:prod": "node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
+    "deploy": "ts-node prisma/migrate-and-seed.ts",
     "seed": "ts-node prisma/seed.ts",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
