Corrijo build de backend para Render

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,9 +6,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "ES2023",
+    "target": "es2017",
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "dist",
+    "rootDir": "src",
     "baseUrl": "./",
     "paths": {
       "src/*": ["src/*"]
