--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -25,5 +25,6 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false
   },
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
